Update build-push-action to v2