@@ -1,10 +1,9 @@
-FROM adoptopenjdk:15-hotspot
+FROM adoptopenjdk:15-hotspot AS base
 
-# Set application root directory
+# Set application directory
 WORKDIR /app
 
-# Setup environment
-ENV SANDPOLIS_IPC_MUTEX             "false"
+# Sandpolis configuration
 ENV SANDPOLIS_NET_CONNECTION_TLS    "true"
 ENV SANDPOLIS_NET_LOGGING_DECODED   "false"
 ENV SANDPOLIS_NET_LOGGING_RAW       "false"
@@ -12,10 +11,19 @@ ENV SANDPOLIS_PATH_LIB              "/app/lib"
 ENV SANDPOLIS_PATH_PLUGIN           "/app/plugin"
 ENV SANDPOLIS_PLUGINS_ENABLED       "true"
 
+FROM gradle:jdk15 AS build
+COPY --chown=gradle:gradle . .
+RUN gradle --no-daemon :com.sandpolis.client.ascetic:imageSyncBuildContext
+
+FROM base AS debug
+COPY --from=build com.sandpolis.client.ascetic/build/docker/lib /app/lib
+
 # Enable JVM debugging
 #ENV JAVA_TOOL_OPTIONS "-agentlib:jdwp=transport=dt_socket,address=0.0.0.0:7000,server=y,suspend=y"
 
-# Install application
-COPY build/docker/lib/ /app/lib
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/urandom", "-cp", "/app/lib/*", "com.sandpolis.client.ascetic.Main"]
 
-ENTRYPOINT ["java", "--module-path", "/app/lib", "-m", "com.sandpolis.client.ascetic/com.sandpolis.client.ascetic.Main"]
+FROM base AS production
+COPY --from=build com.sandpolis.client.ascetic/build/docker/lib /app/lib
+
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/urandom", "-cp", "/app/lib/*", "com.sandpolis.client.ascetic.Main"]
